use variables to replace hard-coded string